--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 jobs:
   build-and-test:
-    executor: python/default
+    executor: python/3.6
     steps:
       - checkout
       - python/load-cache
@@ -18,4 +18,4 @@ jobs:
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build-and-test      
