--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ orbs:
 
 jobs:
   build-and-test:
-    executor: python/3.6
+    executor: 
+      name: python/default
+      tag: "3.6"
     steps:
       - checkout
       - python/load-cache
