--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,10 @@
 version: 2.1
 
 orbs:
-  python: circleci/python@0.2.1
-
-jobs:
-  build-and-test:
-    executor: 
-      name: python/default
-      tag: "3.6"
-    steps:
-      - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
-      - run:
-          command: pytest 
-          name: Build and Test 
+  python: circleci/python@1.4.0
 
 workflows:
   main:
     jobs:
-      - build-and-test      
+      - python/test:
+          test-tool: pytest 
