--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,5 @@ workflows:
   main:
     jobs:
       - python/test:
-          test-tool: pytest 
+          test-tool: pytest
+          version: "3.6"
