--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,10 +10,13 @@ repos:
     hooks:
       - id: black
         pass_filenames: true
-        exclude: baselayer|node_modules|static
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
     hooks:
       - id: flake8
         pass_filenames: true
-        exclude: baselayer|node_modules|static|__init__.py
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.812
+    hooks:
+      - id: mypy
+        pass_filenames: true
