--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,24 @@ jobs:
           name: Install dependencies
           command: pip install -r requirements.dev.txt
       - run:
-          name: Run Tests          
+          name: Run Tests
           command: pytest --cov=./ --cov-report=xml
       - codecov/upload:
           file: coverage.xml
+  linters:
+    executor:
+      name: python/default
+      tag: "3.8"
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.dev.txt
+      - run:
+          pre-commit run --all-files
 
 workflows:
   main:
     jobs:
       - linux38
+      - linters
