--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ six==1.15.0
 PyYAML==5.4.1
 ray==1.2.0
 scikit_learn==0.24.1
-wandb==0.10.27
+wandb>=0.10.30
 marshmallow==3.11.1
 marshmallow_enum==1.5.1
+jsonschema==3.2.0
