--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.19.5
+numpy>=1.20
 scipy==1.5.4
-six==1.15.0
 PyYAML==5.4.1
-ray==1.2.0
 scikit_learn==0.24.1
-wandb==0.10.27
+jsonschema==3.2.0
+jsonref>=0.2
+pydantic>=1.8.2
