--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy>=1.20
-scipy==1.5.4
-PyYAML==5.4.1
-scikit_learn==0.24.1
-jsonschema==3.2.0
+scipy>=1.5.4
+PyYAML>=5.4.1
+scikit_learn>=0.24.1
+jsonschema>=3.2.0
 jsonref>=0.2
 pydantic>=1.8.2
