--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,10 @@ jobs:
       - checkout
       - run:
           name: Install python
-          command: pyenv install 3.9.0b3
+          command:   cd /opt/circleci/.pyenv/plugins/python-build/../.. && git pull && cd - && pyenv install 3.9.5
       - run:
           name: Load python
-          command: pyenv global 3.9.0b3
+          command: pyenv global 3.9.5
       - run:
           name: Install dependencies
           command: pip install -r requirements.dev.txt
