--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,8 @@ jobs:
       - run:
           pre-commit run --all-files
       - run:
+          mypy --install-types
+      - run:
           mypy --ignore-missing-imports --scripts-are-modules .
 
 workflows:
