--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,48 @@ orbs:
   codecov: codecov/codecov@1.1.0
 
 jobs:
+  linux36:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          name: Load python
+          command: pyenv global 3.6.8
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.dev.txt
+      - run:
+          name: Run Tests
+          command: pytest --cov=./ --cov-report=xml
+      - codecov/upload:
+          file: coverage.xml
+      - store_artifacts:
+          path: prof/
+      - store_test_results:
+          path: .
+    resource_class: large
+  linux37:
+    machine:
+      image: ubuntu-1604:202007-01
+    steps:
+      - checkout
+      - run:
+          name: Load python
+          command: pyenv global 3.7.9
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.dev.txt
+      - run:
+          name: Run Tests
+          command: pytest --cov=./ --cov-report=xml
+      - codecov/upload:
+          file: coverage.xml
+      - store_artifacts:
+          path: prof/
+      - store_test_results:
+          path: .
+    resource_class: large
   linux38:
     machine:
       image: ubuntu-1604:202007-01
