add __version__ to __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,6 @@ serialize =
 search = version="{current_version}"
 replace = version="{new_version}"
 
-[bumpversion:file:wandb/__init__.py]
+[bumpversion:file:__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
