--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [bumpversion]
-current_version = 0.0.1
+current_version = 0.0.2.dev1
 commit = True
 tag = False
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:\.dev(?P<dev>\d+))?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}.dev{dev}
 	{major}.{minor}.{patch}
 
@@ -14,3 +14,4 @@ replace = version="{new_version}"
 [bumpversion:file:sweeps/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
