--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,13 @@ jobs:
       - checkout
       - run:
           name: Install python
-          command: pyenv install 3.6.14
+          command:   cd /opt/circleci/.pyenv/plugins/python-build/../.. && git pull && cd - && pyenv install 3.6.14
       - run:
           name: Load python
           command: pyenv global 3.6.14
       - run:
           name: Run tests
-          command: tox -e py36
+          command: pip install tox==3.24.0 && tox -e py36
       - codecov/upload:
           file: coverage.xml
       - store_artifacts:
@@ -33,13 +33,13 @@ jobs:
       - checkout
       - run:
           name: Install python
-          command: pyenv install 3.7.11
+          command:   cd /opt/circleci/.pyenv/plugins/python-build/../.. && git pull && cd - && pyenv install 3.7.11
       - run:
           name: Load python
           command: pyenv global 3.7.11
       - run:
           name: Run tests
-          command: tox -e py37
+          command: pip install tox==3.24.0 && tox -e py37
       - codecov/upload:
           file: coverage.xml
       - store_artifacts:
@@ -58,7 +58,7 @@ jobs:
           command: pyenv global 3.8.3
       - run:
           name: Run Tests
-          command: tox -e py38
+          command: pip install tox==3.24.0 && tox -e py38
       - codecov/upload:
           file: coverage.xml
       - store_artifacts:
@@ -79,7 +79,7 @@ jobs:
           command: pyenv global 3.9.5
       - run:
           name: Run tests
-          command: tox -e py39
+          command: pip install tox==3.24.0 && tox -e py39
     resource_class: large
   linters:
     executor:
