--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,13 +1,2 @@
 -r requirements.txt
-tox>=3.24.0
-pytest==6.2.3
-pytest-cov==2.11.1
-pre-commit==2.12.0
-black==20.8b1
-flake8==3.9.1
-pytest-randomly==3.8.0
-matplotlib>=3
-pytest-xdist>=2.2.1
-pytest-profiling>=1.7.0
-types-PyYAML==5.4.3
-mypy==0.910
+-r requirements.test.txt
