--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy>=1.15,<1.21
+numpy>=1.15,<1.21; python_version <= '3.7'
+numpy==1.22; python_version > '3.7'
 scipy>=1.5.4
 PyYAML
 scikit_learn==0.24.1
