--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py{36,37,38,39}
 
 [testenv:py{36,37,38,39}]
 deps =
-    -r{toxinidir}/requirements.dev.txt
+    -r{toxinidir}/requirements.test.txt
 
 install_command =
     pip install {opts} {packages}
