--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,49 @@ install_command =
 
 commands =
     pytest {posargs}
+
+[black]
+deps=
+    black==22.3.0
+
+[testenv:black]
+basepython = python3
+skip_install = true
+deps = {[black]deps}
+commands =
+    black --check src/ tests/ tools/
+
+[testenv:format]
+basepython = python3
+skip_install = true
+deps= {[black]deps}
+commands =
+    black src/ tests/ tools/
+
+[flake8base]
+deps =
+    flake8
+    flake8-colors
+    grpcio==1.40.0
+
+[testenv:flake8]
+basepython=python3
+skip_install = true
+deps =
+    {[flake8base]deps}
+    flake8-bugbear>=21.4.2
+    pep8-naming
+    flake8-fixme
+    flake8-typing-imports>=1.1
+    flake8-import-order>=0.9
+commands =
+    flake8 --append-config={toxinidir}/.flake8-base {posargs}
+
+[testenv:docstrings]
+basepython=python3
+skip_install = true
+deps =
+    {[flake8base]deps}
+    flake8-docstrings>=1.3.1
+commands =
+    flake8 --select D --append-config={toxinidir}/.flake8-docstrings {posargs}
