re-enable code cov

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ install_command =
     pip install {opts} {packages}
 
 commands =
-    pytest {posargs}
+    pytest {posargs}  --cov=./ --cov-report=xml
 
 [black]
 deps=
