--- a/examples/nested-params/using-cli/sweep-nested.yaml
+++ b/examples/nested-params/using-cli/sweep-nested.yaml
@@ -20,3 +20,8 @@ parameters:
       # lr parameter is nested behind "optimizer"
       lr:
         values: [0.001, 0.0001]
+      nadam:
+        parameters:
+        # beta parameter is nested behind "opimizer.nadam"
+          beta:
+            values: [0.9, 0.95]
