--- a/tox.ini
+++ b/tox.ini
@@ -21,14 +21,14 @@ basepython = python3
 skip_install = true
 deps = {[black]deps}
 commands =
-    black --check src/ tests/ tools/
+    black --check src/ tests/ tools/ examples/
 
 [testenv:format]
 basepython = python3
 skip_install = true
 deps= {[black]deps}
 commands =
-    black src/ tests/ tools/
+    black src/ tests/ tools/ examples/
 
 [flake8base]
 deps =
