--- a/examples/local-controller/sweep-local-bayes.yaml
+++ b/examples/local-controller/sweep-local-bayes.yaml
@@ -1,10 +1,13 @@
-description: sweep local hyperband
+description: sweep examples using local controller and bayes
 
 # Training script to run
-program: train-dummy.py
+program: train-local.py
+
+# Project this sweep is part of
+project: sweeps-examples
 
 # Method can be bayes, random, grid
-method: grid
+method: bayes
 
 # default is cloud based controller
 controller:
@@ -14,13 +17,6 @@ controller:
 metric:
   name: loss_metric
   goal: minimize
-
-# Should we early terminate runs
-early_terminate:
-  type: hyperband
-  max_iter: 27
-  s: 2
-  eta: 3
 
 # Parameter space to search
 parameters:
