--- a/tox.ini
+++ b/tox.ini
@@ -26,34 +26,30 @@ commands =
 [testenv:format]
 basepython = python3
 skip_install = true
-deps= {[black]deps}
+deps= 
+    {[black]deps}
+    isort==4.3.21
 commands =
     black src/ tests/ tools/ examples/
-
-[flake8base]
-deps =
-    flake8
-    flake8-colors
-    grpcio==1.40.0
+    isort src/**/*.py tests/**/*.py tools/**/*.py examples/**/*.py
 
 [testenv:flake8]
 basepython=python3
 skip_install = true
 deps =
-    {[flake8base]deps}
+    flake8
+    flake8-colors
+    grpcio==1.40.0
     flake8-bugbear>=21.4.2
     pep8-naming
     flake8-fixme
     flake8-typing-imports>=1.1
     flake8-import-order>=0.9
+    # flake8-docstrings>=1.3.1
+max-line-length = 80
+select = C,E,F,W,B,B950
+ignore = E501, W503
+import-order-style = google
+application-import-names = flake8
 commands =
-    flake8 --append-config={toxinidir}/.flake8-base {posargs}
-
-[testenv:docstrings]
-basepython=python3
-skip_install = true
-deps =
-    {[flake8base]deps}
-    flake8-docstrings>=1.3.1
-commands =
-    flake8 --select D --append-config={toxinidir}/.flake8-docstrings {posargs}
+    flake8 {posargs}
