--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps=
     isort==4.3.21
 commands =
     black src/ tests/ tools/ examples/
-    isort src/**/*.py tests/**/*.py tools/**/*.py examples/**/*.py
+    isort --recursive src/ tests/ tools/ examples/
 
 [testenv:flake8]
 basepython=python3
