--- a/tox.ini
+++ b/tox.ini
@@ -33,13 +33,20 @@ commands =
     black src/ tests/ tools/ examples/
     isort --recursive src/ tests/ tools/ examples/
 
-[testenv:flake8]
-basepython=python3
-skip_install = true
+[flake8]
+max-line-length = 80
+select = C,E,F,W,B,B950
+ignore = E501, W503
 deps =
     flake8
     flake8-colors
     grpcio==1.40.0
+
+[testenv:flake8]
+basepython=python3
+skip_install = true
+deps =
+    {[flake8base]deps}
     flake8-bugbear>=21.4.2
     pep8-naming
     flake8-fixme
