--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ deps =
 basepython=python3
 skip_install = true
 deps =
-    {[flake8base]deps}
+    {[flake8]deps}
     flake8-bugbear>=21.4.2
     pep8-naming
     flake8-fixme
