use black profile for isort

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,10 @@ deps = {[black]deps}
 commands =
     black --check src/ tests/ tools/ examples/
 
+[isort]
+profile = black
+multi_line_output = 3
+
 [testenv:format]
 basepython = python3
 skip_install = true
@@ -30,8 +34,8 @@ deps=
     {[black]deps}
     isort==4.3.21
 commands =
-    black src/ tests/ tools/ examples/
     isort --recursive src/ tests/ tools/ examples/
+    black src/ tests/ tools/ examples/
 
 [flake8]
 max-line-length = 80
