--- a/tox.ini
+++ b/tox.ini
@@ -23,14 +23,24 @@ deps = {[black]deps}
 commands =
     black --check src/ tests/ tools/ examples/
 
+[isort]
+profile = black
+multi_line_output = 3
+
 [testenv:format]
 basepython = python3
 skip_install = true
-deps= {[black]deps}
+deps=
+    {[black]deps}
+    isort==4.3.21
 commands =
+    isort --recursive src/ tests/ tools/ examples/
     black src/ tests/ tools/ examples/
 
-[flake8base]
+[flake8]
+max-line-length = 80
+select = C,E,F,W,B,B950
+ignore = E501, W503
 deps =
     flake8
     flake8-colors
@@ -40,20 +50,11 @@ deps =
 basepython=python3
 skip_install = true
 deps =
-    {[flake8base]deps}
+    {[flake8]deps}
     flake8-bugbear>=21.4.2
     pep8-naming
     flake8-fixme
     flake8-typing-imports>=1.1
     flake8-import-order>=0.9
 commands =
-    flake8 --append-config={toxinidir}/.flake8-base {posargs}
-
-[testenv:docstrings]
-basepython=python3
-skip_install = true
-deps =
-    {[flake8base]deps}
-    flake8-docstrings>=1.3.1
-commands =
-    flake8 --select D --append-config={toxinidir}/.flake8-docstrings {posargs}
+    flake8 {posargs}
