job in sweep config

--- a/examples/launch/launch-config-local-container.yaml
+++ b/examples/launch/launch-config-local-container.yaml
@@ -1,6 +1,7 @@
 queue: "default"
+# You can also specify the job in the sweep config
 # job: "launch-test/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
-job: "hupo/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
+# job: "hupo/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
 resource: "local-container"
 docker_image: ""
 scheduler:
