--- a/examples/launch/launch-config-kube.yaml
+++ b/examples/launch/launch-config-kube.yaml
@@ -1,5 +1,7 @@
 queue: "default"
-job: "launch-test/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
+# You can also specify the job in the sweep config
+# job: "launch-test/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
+# job: "hupo/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
 resource: "kubernetes"
 scheduler:
   docker_image: "wandb/launch-agent-dev:latest"
