--- a/examples/launch/sweep-launch-jobs.yaml
+++ b/examples/launch/sweep-launch-jobs.yaml
@@ -1,5 +1,9 @@
 description: sweep examples using launch jobs
 
+# You can also specify the job in the launch config
+# job: "launch-test/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
+job: "hupo/wandb-launch-sweeps/job-source-wandb-launch-sweeps-examples_launch-jobs_train-launch-jobs.py:v0"
+
 # Training script to run
 program: train-launch-jobs.py
 
