Grid sweeps no longer run endlessly when whole-number floats are used in sweep config (#109)
* Grid sweeps no longer run endlessly when scientific notation is used in sweep config

* use is_integer

* Pin pluggy version

* pin it for the right test facepalm

* bump pytest version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: pyenv global 3.8.5
       - run:
           name: Run Tests
-          command: pip install tox==3.24.0 && tox -e py38
+          command: pip install pluggy==1.4.0 tox==3.24.0 && tox -e py38
       - codecov/upload:
           file: coverage.xml
       - store_artifacts:
