--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           path: prof/
       - store_test_results:
           path: .
-    resource_class: xlarge
+    resource_class: large
   linux310:
     docker:
       - image: cimg/python:3.10
@@ -40,7 +40,7 @@ jobs:
           path: prof/
       - store_test_results:
           path: .
-    resource_class: xlarge
+    resource_class: large
   linux311:
     docker:
       - image: cimg/python:3.11
@@ -58,7 +58,7 @@ jobs:
           path: prof/
       - store_test_results:
           path: .
-    resource_class: xlarge
+    resource_class: large
   linux312:
     docker:
       - image: cimg/python:3.12
@@ -76,7 +76,7 @@ jobs:
           path: prof/
       - store_test_results:
           path: .
-    resource_class: xlarge
+    resource_class: large
   linters39:
     docker:
       - image: cimg/python:3.9
