--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,139 +5,15 @@ orbs:
   codecov: codecov/codecov@5.0.3
 
 jobs:
-  linux39:
-    docker:
-      - image: cimg/python:3.9
+  test:
+    machine:
+      image: ubuntu-2204:2024.11.1
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
-      - run:
-          name: Run tests
-          command: tox -e py39
-          no_output_timeout: 60m
-      - codecov/upload
-      - store_artifacts:
-          path: prof/
-      - store_test_results:
-          path: .
+      - run: while true; do sleep 10000; done
     resource_class: large
-  linux310:
-    docker:
-      - image: cimg/python:3.10
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
-      - run:
-          name: Run tests
-          command: tox -e py310
-          no_output_timeout: 60m
-      - codecov/upload
-      - store_artifacts:
-          path: prof/
-      - store_test_results:
-          path: .
-    resource_class: large
-  linux311:
-    docker:
-      - image: cimg/python:3.11
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
-      - run:
-          name: Run tests
-          command: tox -e py311
-          no_output_timeout: 60m
-      - codecov/upload
-      - store_artifacts:
-          path: prof/
-      - store_test_results:
-          path: .
-    resource_class: large
-  linux312:
-    docker:
-      - image: cimg/python:3.12
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
-      - run:
-          name: Run tests
-          command: tox -e py312
-          no_output_timeout: 60m
-      - codecov/upload
-      - store_artifacts:
-          path: prof/
-      - store_test_results:
-          path: .
-    resource_class: large
-  linters39:
-    docker:
-      - image: cimg/python:3.9
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install -r requirements.dev.txt
-      - run:
-          name: Run linters
-          command: |
-            pre-commit run --all-files
-            mypy --ignore-missing-imports --scripts-are-modules .
-  linters310:
-    docker:
-      - image: cimg/python:3.10
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install -r requirements.dev.txt
-      - run:
-          name: Run linters
-          command: |
-            pre-commit run --all-files
-            mypy --ignore-missing-imports --scripts-are-modules .
-  linters311:
-    docker:
-      - image: cimg/python:3.11
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install -r requirements.dev.txt
-      - run:
-          name: Run linters
-          command: |
-            pre-commit run --all-files
-            mypy --ignore-missing-imports --scripts-are-modules .
-  linters312:
-    docker:
-      - image: cimg/python:3.12
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: pip install -r requirements.dev.txt
-      - run:
-          name: Run linters
-          command: |
-            pre-commit run --all-files
-            mypy --ignore-missing-imports --scripts-are-modules .
 
 workflows:
   main:
     jobs:
       - linux39
-      - linux310
-      - linux311
-      - linux312
-      - linters39
-      - linters310
-      - linters311
-      - linters312
