--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,20 @@ orbs:
 
 jobs:
   linux39:
-    docker:
-      - image: cimg/python:3.9
+    machine:
+      image: ubuntu-2204:2024.11.1
     steps:
       - checkout
       - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
+          name: Install python
+          command: pyenv install 3.9
+      - run:
+          name: Load python
+          command: pyenv global 3.9
       - run:
           name: Run tests
-          command: tox -e py39
-          no_output_timeout: 30m
+          command: pip install tox==3.24.0 && tox -e py39
+          no_output_timeout: 60m
       - codecov/upload
       - store_artifacts:
           path: prof/
@@ -24,17 +27,20 @@ jobs:
           path: .
     resource_class: xlarge
   linux310:
-    docker:
-      - image: cimg/python:3.10
+    machine:
+      image: ubuntu-2204:2024.11.1
     steps:
       - checkout
       - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
+          name: Install python
+          command: pyenv install 3.10
+      - run:
+          name: Load python
+          command: pyenv global 3.10
       - run:
           name: Run tests
-          command: tox -e py310
-          no_output_timeout: 30m
+          command: pip install tox==3.24.0 && tox -e py310
+          no_output_timeout: 60m
       - codecov/upload
       - store_artifacts:
           path: prof/
@@ -42,17 +48,20 @@ jobs:
           path: .
     resource_class: xlarge
   linux311:
-    docker:
-      - image: cimg/python:3.11
+    machine:
+      image: ubuntu-2204:2024.11.1
     steps:
       - checkout
       - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
+          name: Install python
+          command: pyenv install 3.11
+      - run:
+          name: Load python
+          command: pyenv global 3.11
       - run:
           name: Run tests
-          command: tox -e py311
-          no_output_timeout: 30m
+          command: pip install tox==3.24.0 && tox -e py311
+          no_output_timeout: 60m
       - codecov/upload
       - store_artifacts:
           path: prof/
@@ -60,17 +69,20 @@ jobs:
           path: .
     resource_class: xlarge
   linux312:
-    docker:
-      - image: cimg/python:3.12
+    machine:
+      image: ubuntu-2204:2024.11.1
     steps:
       - checkout
       - run:
-          name: Install dependencies
-          command: pip install tox==3.24.0
+          name: Install python
+          command: pyenv install 3.12
+      - run:
+          name: Load python
+          command: pyenv global 3.12
       - run:
           name: Run tests
-          command: tox -e py312
-          no_output_timeout: 30m
+          command: pip install tox==3.24.0 setuptools==75.8.0 && tox -e py312
+          no_output_timeout: 60m
       - codecov/upload
       - store_artifacts:
           path: prof/
