--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 numpy>=1.15,<2
 scipy>=1.5.4
 PyYAML>=5.4
-scikit_learn>=0.24.2; python_version == "3.6"
-scikit_learn >= 1.0; python_version > "3.6"
+scikit_learn>=1.0
 jsonschema>=3.2.0
 jsonref>=0.2
-pydantic==2.4.2
+pydantic>=2.6
